fix🛠: navbar and gaps

--- a/src/app.module.css
+++ b/src/app.module.css
@@ -10,7 +10,7 @@
   gap: var(--gap);
 }
 .top__content {
-  margin-top: 100px;
+  margin-top: calc(80px + (140 - 80) * ((100vw - 320px) / (1440 - 320)));
   display: flex;
   height: 100%;
   justify-content: space-around;
@@ -32,7 +32,7 @@
   margin-bottom: var(--gap);
 }
 .footer__image {
-  width: calc(300px + (450 - 300) * ((100vw - 320px) / (1440 - 320)));
+  width: calc(280px + (500 - 280) * ((100vw - 320px) / (1440 - 320)));
 }
 
 @media screen and (max-width: 900px) {
@@ -41,5 +41,10 @@
     justify-content: center;
     align-items: center;
     gap: 50px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .bottom_content {
+    flex-direction: column;
   }
 }
